--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,8 +1,8 @@
 {
     "description" : {
-        "login": "Inicia sesión con tu cuenta de Spotify",
-        "playlist1": "Crea listas de reproducción con tus canciones favoritas",
-        "lyrics1": "Selecciona el modo karaoke para ver las letras de las canciones"
+        "privacy": "Política de privacidad",
+        "terms": "Terminos y condiciones",
+        "cookies": "Cookies"
     },
 
     "login": {
