--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,7 +1,7 @@
 {
     "description" : {
         "privacy": "Política de privacidad",
-        "terms": "Terminos y condiciones",
+        "terms": "Términos y condiciones",
         "cookies": "Cookies"
     },
 
